# zkp

./: README.md  main.md
backend/: Makefile  README.md
backend/examples-api/: Makefile
backend/examples-zkmips/: README.md  test  test.zmips
backend/examples-zkmips/read_test/: read_test
backend/framework/gadgetlib/gadgetlib/: common_use.hpp  gadget.cpp  protoboard.hpp
backend/framework/zkmetis/: Makefile  main.cpp
backend/framework/zkmetis-tests/: Makefile  instructions_UTEST.cpp  zMIPS_UTEST.cpp
backend/framework/zkmetis/src/: executeProtocol.cpp  zkMipsParser.cpp  zkMipsParser.hpp  zkmetis-api.cpp  zkmetis-api.hpp
backend/framework/zkmetis/src/RAM/: RAMDefinitions.hpp  RAMInstance.cpp  RAMInstance.hpp
backend/framework/zkmetis/src/RAMtoBair/ConstraintSystemToBair/: cs2Bair.cpp
backend/framework/zkmetis/src/RAMtoBair/RamToContraintSystem/: ALU.cpp  ALU.hpp  ALUInputConsistency.cpp  ALUInputConsistency.cpp.save  traceConsistency.cpp  (+1 more)
backend/libstark/src/protocols/: protocol.cpp
diagrams/: benchmarks.tex  recursive-proof-1.tex  recursive-proof-2.tex  recursive-proof-3.tex
mips_parser/: Cargo.toml  README.md
mips_parser/src/: lib.rs  utils.rs
mips_parser/src/mem/: mod.rs  page.rs  page_table.rs
mips_parser/src/mips_lang/: error.rs  mod.rs  number.rs  token.rs
mips_parser/src/mips_lang/parser/: arch.rs  expression.rs  mod.rs  primitives.rs
mips_parser/src/mips_lang/types/: arch.rs  expression.rs  mod.rs
mips_parser/src/pest/literals/: arch.rs  float.rs  ident.rs  mips.pest  mod.rs  numeric.rs  parser.rs  remaining.pest  string.rs
