[package]
name = "mips_parser"
version = "0.1.0"
authors = ["Eric Cao <eric7252000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_derive = "0.1.7"
maplit = "1.0.2"
lazy_static = "1.4.0"
itertools = "0.9"
arrayref = "0.3.6"
bitflags = "1.2.1"
nom = { version = "6", features = ["regexp"] }
nom_locate = "3.0.0"
